// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ContextMenu allowTags=undefined 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu ccrKey="<UU5.Parrot.Page ccrKey='UU5.Parrot.Page' />" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu checkGrammar=false 1`] = `
<forwardRef(Popover)
  checkGrammar={false}
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu checkGrammar=true 1`] = `
<forwardRef(Popover)
  checkGrammar={true}
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu checkHighlight=false 1`] = `
<forwardRef(Popover)
  checkHighlight={false}
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu checkHighlight=true 1`] = `
<forwardRef(Popover)
  checkHighlight={true}
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu checkSpaces=false 1`] = `
<forwardRef(Popover)
  checkSpaces={false}
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu checkSpaces=true 1`] = `
<forwardRef(Popover)
  checkSpaces={true}
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu className="my-classname" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu my-classname"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu className="test-classname" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu test-classname"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu compactSubmenu=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu compactSubmenu=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu content="This is Content from ContentMixin" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content="This is Content from ContentMixin"
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu content=12345 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={12345}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu controlled=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu controlled=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu default props 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu disabled=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu disabled=false 3`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu disabled=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu disabled=true 3`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu docKit examples UU5.Bricks.ContextMenu example make snapshot 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer="Footer"
  forceRender={false}
  header="Header"
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={true}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu docKit examples UU5.Bricks.ContextMenu myComponent from allowTags is used 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer="Footer"
  forceRender={false}
  header="Header"
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={true}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu dynamic=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu dynamic=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={true}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={
    <div>
      Footer of section
    </div>
  }
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu fullTextSearchPriority=0 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu uu-fulltextsearch-0"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu fullTextSearchPriority=0 2`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu uu-fulltextsearch-0"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={
    <div>
      Header of section
    </div>
  }
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu hidden=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu hidden=false 3`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu hidden=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu hidden=true 3`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu id="myId" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="myId-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu id="test-id" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="test-id-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu ignoreHTML=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu ignoreHTML=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level="0" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="0"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level="1" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="1"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level="2" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="2"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level="3" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="3"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level="4" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="4"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level="5" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="5"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level="6" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level="6"
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level=0 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={0}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level=1 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={1}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level=2 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={2}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level=3 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={3}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level=4 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={4}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level=5 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={5}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu level=6 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={6}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu mainAttrs=undefined 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu name="myName" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="bigBox" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="bigBoxCollection" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="box" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="box" 3`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="boxCollection" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="inline" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="inline" 3`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="page" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="smallBox" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="smallBoxCollection" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu nestingLevel="spa" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu noPrint=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu noPrint=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu pureRender=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu pureRender=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={true}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu selected=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu selected=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={true}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu shown=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu shown=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={true}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu style="padding:8px; borderRadius: 2px" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu style={"backgroundColor":"red","color":"blue"} 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu style={"margin":8} 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={
    Object {
      "margin": 8,
    }
  }
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu textCorrector=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  textCorrector={false}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu textCorrector=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  textCorrector={true}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu tooltip="My Tooltip" 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip="My Tooltip"
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu underline=false 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;

exports[`UU5.Bricks.ContextMenu underline=true 1`] = `
<forwardRef(Popover)
  className="uu5-bricks-context-menu"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={false}
  style={null}
  tooltip={null}
>
  <ScreenSize>
    <Component />
  </ScreenSize>
</forwardRef(Popover)>
`;
